# django-accounting-inventory

./: README.md  __init__.py  apps.py  py.typed  pyproject.toml  serializer_mixins.py  urls.py
ap/: apps.py  models.py  views.py
ap/migrations/: 0001_initial.py
ar/: apps.py  models.py  views.py
core/: apps.py  models.py  views.py
django_accounting/: __init__.py  admin.py  apps.py  conf.py  mixins.py  signals.py  urls.py
django_accounting/ap/: models.py  serializers.py  views.py
django_accounting/ar/: models.py  serializers.py  views.py
django_accounting/ar/migrations/: 0001_initial.py
django_accounting/core/: models.py  serializers.py  views.py
django_accounting/core/migrations/: 0001_initial.py
django_accounting/inventory/: models.py  serializers.py  views.py
django_accounting/inventory/migrations/: 0001_initial.py
django_accounting/ledger/: models.py  serializers.py  views.py
django_accounting/ledger/migrations/: 0001_initial.py
django_accounting/tax/: models.py  views.py
inventory/: apps.py  models.py  views.py
ledger/: apps.py  models.py  views.py
tax/: apps.py  models.py  serializers.py  views.py
tax/migrations/: 0001_initial.py
test/: conftest.py  settings.py
