[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "django-accounting"
version = "1.0.0"
description = "Configurable double-entry accounting package for Django REST Framework — AR, AP, inventory with batch/expiry tracking, multi-warehouse, and tax."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["django", "accounting", "ERP", "inventory", "AR", "AP", "DRF"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-django>=4.7",
    "factory-boy>=3.3",
    "faker>=20.0",
    "black",
    "ruff",
    "django-filter>=23.0",
    "drf-spectacular>=0.27",
]
filters = ["django-filter>=23.0"]
docs = ["drf-spectacular>=0.27"]

[project.urls]
Repository = "https://github.com/yourname/django-accounting"
Issues = "https://github.com/yourname/django-accounting/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_accounting*"]

[tool.setuptools.package-data]
"django_accounting" = ["migrations/**/*.py", "templates/**/*.html"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests/test_*.py"]
