[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-accounting-dminozadev"           # name on PyPI (pip install django-accounting)
version = "1.0.1"
description = "Configurable double-entry accounting package for Django REST Framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Dario Minoza", email = "dminozadev@gmail.com" }
]
keywords = [
    "django", "accounting", "ERP",
    "inventory", "AR", "AP", "DRF",
    "double-entry", "bookkeeping",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-django>=4.7",
    "factory-boy>=3.3",
    "black",
    "ruff",
    "twine",
    "build",
]
filters = ["django-filter>=23.0"]
stubs = [
    "django-stubs>=4.2",
    "djangorestframework-stubs>=3.14",
]

[project.urls]
Homepage = "https://github.com/dminoza/django-accounting-inventory"
Repository = "https://github.com/dminoza/django-accounting-inventory"
Issues = "https://github.com/dminoza/django-accounting-inventory/issues"
Changelog = "https://github.com/yourusername/django-accounting/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_accounting*"]

[tool.setuptools.package-data]
"django_accounting" = [
    "migrations/**/*.py",
    "py.typed",               # marks package as typed
]
